# hitchhikers-guide-to-developing

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .ruff.toml  404.html  ARCHITECTURE.md  BIBLIOGRAPHY.md  CONTRIBUTING.md  LICENSE  Makefile  README-HEADER.md  README.md  ROADMAP.md  THE-JOURNEY.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tox.ini
.github/workflows/: deploy-docs.yml  test-lab-examples.yml
ARCHITECTURE/: index.html
BEAGLEPLAY_SETUP/: index.html
BIBLIOGRAPHY/: index.html
BUYMEACOFFEE-PROFILE/: index.html
CONTRIBUTING/: index.html
LAB_STRUCTURE/: index.html
QUICK_START/: index.html
ROADMAP/: index.html
THE-JOURNEY/: index.html
TRAINING_ANALYSIS/: index.html
artifacts/: .gitkeep
artifacts/configurations/: .gitkeep
artifacts/datasets/: .gitkeep
data/recordings/: .gitkeep
docs/: BEAGLEPLAY_SETUP.md  BUYMEACOFFEE-PROFILE.md  LAB_STRUCTURE.md  QUICK_START.md  SUBMODULES.md  THE-JOURNEY.md  TRAINING_ANALYSIS.md  index.md
docs/labs/debugging/: README.md  lab19-system-monitoring.md  lab20-gdb-debugging.md  lab21-strace-ltrace.md  lab22-valgrind.md  lab23-perf-ftrace.md  lab24-ebpf-bcc.md  lab25-kernel-debugging.md  lab26-kdump-kexec.md
docs/labs/embedded-linux/: README.md  lab01-toolchain.md  lab02-hardware.md  lab03-bootloader.md  lab04-kernel.md  lab05-rootfs.md  lab06-hardware.md  lab07-block-filesystems.md  lab08-buildroot.md  lab09-application-development.md
docs/labs/yocto/: README.md  lab10-yocto-first-build.md  lab11-yocto-advanced-config.md  lab12-yocto-custom-app.md  lab13-yocto-custom-layer.md  lab14-yocto-extend-recipe.md  lab15-yocto-custom-machine.md  lab16-yocto-custom-image.md  lab17-yocto-app-development.md  lab18-yocto-devtool.md
docs/methodologies/: embedded-linux-development.md  linux-debugging.md
docs/standards/: documentation-standards.md
docs/submodules/: index.md
docs/templates/: lab-template.md  research-note.md  technical-procedure.md
lab-examples/: README.md
lab-examples/common/scripts/: validate-labs.sh
lab-examples/embedded-linux/lab01-toolchain/: Makefile  README.md
labs/: README.md
labs/debugging/: index.html
labs/debugging/lab19-system-monitoring/: index.html
labs/debugging/lab20-gdb-debugging/: index.html
labs/debugging/lab21-strace-ltrace/: index.html
labs/debugging/lab22-valgrind/: index.html
labs/debugging/lab23-perf-ftrace/: index.html
labs/debugging/lab24-ebpf-bcc/: index.html
labs/embedded-linux/: index.html
labs/yocto/: index.html
methodologies/embedded-linux-development/: index.html
methodologies/linux-debugging/: index.html
scripts/: verify-labs.sh
search/: search_index.json
standards/documentation-standards/: index.html
tests/: __init__.py  test_example.py
(+24 files in other folders)
